# DebugMaster_STM32F407VET6

./: .gitattributes  Design.md  Pinout.ai  README.md  开发框架构思.md
F407/USB_FS/: USB_FS+STM32F407VETx.cbuild-run.yml  USB_FS.cbuild-idx.yml  USB_FS.cbuild-pack.yml  USB_FS.cbuild-set.yml  USB_FS.csolution.yml  vcpkg-configuration.json
F407/USB_FS/USB_FS/: .clangd  USB_FS.Debug+STM32F407VETx.cbuild.yml  USB_FS.cproject.yml  main.c
F407/USB_FS/USB_FS/RTE/: stm32f4xx_it.c
F407/USB_FS/USB_FS/RTE/Device/STM32F407VETx/: RTE_Device.h  regions_STM32F407VETx.h
F407/USB_FS/USB_FS/RTE/STM32_USB_Device_Library/CDC/Src/: usbd_cdc_if.c
F407/USB_FS/USB_FS/RTE/STM32_USB_Device_Library/Inc/: usbd_conf.h
F407/USB_FS/USB_FS/RTE/STM32_USB_Device_Library/Src/: usbd_conf.c  usbd_desc.c
F407/USB_FS/USB_FS/RTE/_Debug_STM32F407VETx/: Pre_Include_Global.h  RTE_Components.h
F407/USB_FS/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
F407/USB_FS/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json
F407/USB_FS/tmp/USB_FS.Debug+STM32F407VETx/: CMakeLists.txt  components.cmake  groups.cmake
F407/USB_FS/tmp/USB_FS.Debug+STM32F407VETx/src/USB_FS.Debug+STM32F407VETx-stamp/: USB_FS.Debug+STM32F407VETx-configure-.cmake  USB_FS.Debug+STM32F407VETx-database-.cmake  USB_FS.Debug+STM32F407VETx-source_dirinfo.txt
F407/USB_FS/tmp/USB_FS.Debug+STM32F407VETx/tmp/: USB_FS.Debug+STM32F407VETx-cfgcmd.txt  USB_FS.Debug+STM32F407VETx-mkdirs.cmake
